# sqlalchemy-declarative-extensions

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  meow.py  og.py  pyproject.toml  setup.cfg
.github/: FUNDING.yml
.github/workflows/: publish.yml  release.yml  test.yml
docs/: Makefile  pyproject.toml
docs/source/: alembic.md  api.md  audit_tables.md  conf.py  functions.md  grants.md  index.md  index.rst  roles.md  rows.md  schemas.md  sqlalchemy.md  triggers.md  views.md
docs/source/contributing/: dialect-support.md  index.md  testing.md
docs/source/dialects/: index.md  mysql.md  postgresql.md  snowflake.md
meow/: __main__.py  printy_stuff.py  snowflake_stuff.py
src/sqlalchemy_declarative_extensions/: __init__.py  api.py  audit.py  compat.py  context.py  op.py  sql.py  sqlalchemy.py  typing.py
src/sqlalchemy_declarative_extensions/alembic/: __init__.py  base.py  database.py  function.py  grant.py  model.py  procedure.py  role.py  row.py  schema.py  trigger.py  view.py
src/sqlalchemy_declarative_extensions/database/: __init__.py  base.py  compare.py  ddl.py
src/sqlalchemy_declarative_extensions/dialect/: postgresql.py
src/sqlalchemy_declarative_extensions/dialects/: __init__.py  from_string.py  query.py
src/sqlalchemy_declarative_extensions/function/: __init__.py  base.py  compare.py  ddl.py
src/sqlalchemy_declarative_extensions/grant/: __init__.py  base.py  compare.py  ddl.py
src/sqlalchemy_declarative_extensions/model/: __init__.py  base.py  compare.py  query.py
src/sqlalchemy_declarative_extensions/partition/: base.py
src/sqlalchemy_declarative_extensions/procedure/: __init__.py  base.py  compare.py  ddl.py
src/sqlalchemy_declarative_extensions/role/: __init__.py  base.py  compare.py  ddl.py  generic.py  state.py  topological_sort.py
src/sqlalchemy_declarative_extensions/row/: __init__.py  base.py  compare.py  query.py
src/sqlalchemy_declarative_extensions/schema/: __init__.py  base.py  compare.py  ddl.py
src/sqlalchemy_declarative_extensions/trigger/: __init__.py  base.py  compare.py  ddl.py
src/sqlalchemy_declarative_extensions/view/: __init__.py  base.py  compare.py  ddl.py
tests/: __init__.py  conftest.py  utilities.py
tests/audit/: test_context_values.py  test_create_all.py  test_disabled_operation.py  test_quoting.py
tests/dialect/postgresql/: test_acl.py  test_exclude_extension_objects.py  test_function_defaults.py  test_postgres_11.py  test_postgres_14_sqlbody.py
tests/examples/test_audit_update/: models.py
tests/examples/test_create_models/: test_migrations.py
tests/examples/test_create_role/: models.py  test_migrations.py
tests/examples/test_create_rows/: models.py  test_migrations.py
tests/examples/test_delete_models/: models.py  test_migrations.py
tests/examples/test_delete_models_ignore_unspecified/: conftest.py  models.py  test_migrations.py
tests/examples/test_delete_rows/: conftest.py  models.py  test_migrations.py
tests/examples/test_delete_rows_ignore_unspecified/: conftest.py  models.py  test_migrations.py
tests/examples/test_function_create/: models.py  (+1 more)
tests/function/: test_alembic.py  test_create.py  test_create_mysql.py  test_create_postgresql.py  test_create_requires_normalization.py  test_delete.py  test_delete_mysql.py  test_drop_all.py  test_exclude.py  test_filter.py  test_function_normalization.py  test_ignore_unspecified.py  test_metadata_sequence.py  test_pg_security_definer.py  test_procedure.py  test_quote.py  test_unnamed_param.py  test_update.py  test_update_mysql.py
tests/grant/: test_alembic.py  test_false_grants_imply_default_grants.py  test_grant_schema.py  test_ignore_unspecified.py  test_metadata_sequence.py  test_no_grants.py  test_only_defined_roles.py  test_postgresql.py  test_remove_unspecified.py  test_reserved_keyword.py  test_sqlalchemy.py  test_table_grants.py  test_view.py
tests/model/: test_alembic.py  test_sqlalchemy.py
tests/procedure/: test_alembic.py  test_create.py  test_create_mysql.py  test_create_requires_normalization.py  test_delete.py  test_delete_mysql.py  test_drop_all.py  test_exclude.py  test_filter.py  test_ignore_unspecified.py  test_metadata_sequence.py  test_pg_security_definer.py  test_quote.py  test_update.py  test_update_mysql.py
tests/role/: test_alembic.py  test_drop_all.py  test_external.py  test_filter.py  test_iterable_roles.py  test_metadata_sequence.py  test_remove_valid_until.py  test_sqlalchemy.py  test_sqlalchemy_snowflake.py  test_topological_sort.py  test_update_parent_role.py  test_use_role.py
tests/row/: test_alembic.py  test_bind_syntax.py  test_column_added.py  test_invalid_table.py  test_metadata_sequence.py  test_missing_primary_key.py  test_schema_context.py  test_sqlalchemy.py
tests/schema/: test_alembic.py  test_drop.py  test_drop_all.py  test_filter.py  test_metadata_sequence.py  test_snowflake.py  test_sqlalchemy.py
tests/trigger/: test_alembic.py  test_arguments.py  test_create.py  test_create_mysql.py  test_create_postgres.py  test_drop.py  test_drop_all.py  test_drop_mysql.py  test_drop_postgres.py  test_for_each_statement_postgres.py  test_ignore_unspecified.py  test_ignore_unspecified_postgres.py  test_metadata_sequence.py  test_missing_when.py  test_missing_when_postgres.py  test_schema_quoting.py  test_update.py  test_update_mysql.py  test_update_postgres.py  test_when_references_new.py  test_when_references_new_postgres.py  test_wrapped_parens.py  test_wrapped_parens_postgres.py
tests/view/: test_add_constraint_to_existing.py  test_alembic.py  test_alembic_utils.py  test_constraint_drops_first.py  test_convert_to_materialized.py  test_create_table_and_view_together.py  test_drop_all.py  test_escaped_bindparam.py  test_filter.py  test_ignore_glob.py  test_ignore_pg_views.py  test_ignore_unspecified.py  test_ignore_views.py  test_materialized.py  test_metadata_sequence.py  test_only_constraint_changes.py  test_only_different_constraints_drop.py  test_pg_materialized_no_data.py  test_snowflake.py  test_sqlalchemy.py  test_update.py  test_view_function.py  test_view_in_schema.py
(+154 files in other folders)
